Add an endpoint to get all docs, add an example application
